# crawl-tiktok

./: .dockerignore  .gitignore  Dockerfile  README.md  UPGRADE_GUIDE.md  deploy.sh  docker-compose.yml  production.env  pyproject.toml  requirements.txt  setup_web.py
.github/workflows/: publish.yml
src/TiktokCrawler/: cli.py  downloader.py
web/: app.py  app.py.new
web/templates/: index.html
